[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahrefs-cli"
version = "1.0.0"
description = "SEO analytics from the command line — powered by Ahrefs API v3"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ahrefs", "seo", "cli", "backlinks", "keyword-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
ahrefs = "ahrefs_cli.cli:main"

[project.urls]
Homepage = "https://github.com/Hakea-Agency/ahrefs-cli"
Repository = "https://github.com/Hakea-Agency/ahrefs-cli"
